Add spread feature

--- a/example/product.html
+++ b/example/product.html
@@ -67,6 +67,7 @@
           })
           .nodeWidth(15)
           .nodePadding(10)
+          .spread(true)
           .iterations(0)
           .draw(json);
 
