Add alignLabel option

--- a/example/product.html
+++ b/example/product.html
@@ -70,6 +70,7 @@
           .nodePadding(10)
           .spread(true)
           .iterations(0)
+          .alignLabel('end')
           .draw(json);
 
 
